<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detail"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp">

    <ImageView
        android:id="@+id/detail_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/item_job_logo"
        android:src="@drawable/ic_baseline_business_80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/detail_name"
        style="@style/Theme.HireMe.TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/detail_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_image" />

    <TextView
        android:id="@+id/detail_company_name"
        style="@style/Theme.HireMe.TextRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_company_name"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_name" />

    <TextView
        android:id="@+id/detail_location_name"
        style="@style/Theme.HireMe.TextRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/detail_location_name"
        android:textSize="12sp"
        app:drawableStartCompat="@drawable/ic_outline_location_on_20dp"
        app:layout_constraintTop_toBottomOf="@id/detail_company_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/detail_time_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:orientation="vertical"
        android:gravity="center"
        android:minWidth="88dp"
        app:layout_constraintTop_toBottomOf="@id/detail_location_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/detail_accessibility_layout">

        <ImageView
            android:id="@+id/detail_time_logo"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/item_job_type"
            android:src="@drawable/ic_outline_alarm_32dp" />

        <TextView
            android:id="@+id/detail_time_title"
            style="@style/Theme.HireMe.TextRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/item_job_type"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/detail_time_name"
            style="@style/Theme.HireMe.TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/item_job_type"
            android:textSize="14sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/detail_accessibility_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:minWidth="88dp"
        app:layout_constraintTop_toTopOf="@id/detail_time_layout"
        app:layout_constraintStart_toEndOf="@id/detail_time_layout"
        app:layout_constraintEnd_toStartOf="@id/detail_salary_layout">

        <ImageView
            android:id="@+id/detail_accessibility_logo"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/item_job_accessibility"
            android:src="@drawable/ic_outline_wheelchair_pickup_32dp" />

        <TextView
            android:id="@+id/detail_accessibility_title"
            style="@style/Theme.HireMe.TextRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/detail_accessibility_title"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/detail_accessibility_name"
            style="@style/Theme.HireMe.TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/detail_accessibility_title"
            android:textSize="14sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/detail_salary_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:minWidth="88dp"
        app:layout_constraintTop_toTopOf="@id/detail_time_layout"
        app:layout_constraintStart_toEndOf="@id/detail_accessibility_layout"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/detail_salary_logo"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/item_job_salary"
            android:src="@drawable/ic_outline_payments_32dp" />

        <TextView
            android:id="@+id/detail_salary_title"
            style="@style/Theme.HireMe.TextRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/item_job_salary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/detail_salary_name"
            style="@style/Theme.HireMe.TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/item_job_salary"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/detail_description_title"
        style="@style/Theme.HireMe.TextRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/detail_description_title"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/detail_time_layout"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/detail_description_content"
        style="@style/Theme.HireMe.TextRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/item_job_description"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/detail_description_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/detail_requirement_title"
        style="@style/Theme.HireMe.TextRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/detail_requirement_title"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/detail_description_content"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/detail_requirement_content"
        style="@style/Theme.HireMe.TextRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/item_job_description"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/detail_requirement_title"
        app:layout_constraintStart_toStartOf="parent"/>


    <Button
        android:id="@+id/detail_apply"
        style="@style/Theme.HireMe.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:text="@string/detail_apply"
        app:layout_constraintTop_toBottomOf="@id/detail_requirement_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>