<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.HireMe.Fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.profile.ProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="56dp"
        android:src="@drawable/pfp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/profile_name"
        style="@style/Theme.HireMe.TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/profile_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image" />

    <TextView
        android:id="@+id/profile_email"
        style="@style/Theme.HireMe.TextRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/profile_email"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/profile_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/profile_cv"
        style="@style/Theme.HireMe.TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/profile_cv"
        app:layout_constraintTop_toBottomOf="@id/profile_email"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/file_picker_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/profile_upload_cv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_cv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/file_picker_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/neutral_500"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/file_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:background="@null"
        android:contentDescription="@string/profile_file_picker"
        android:padding="12dp"
        android:src="@drawable/ic_outline_file_upload_24dp"
        app:layout_constraintBottom_toBottomOf="@id/file_picker_layout"
        app:layout_constraintEnd_toEndOf="@id/file_picker_layout"
        app:layout_constraintTop_toTopOf="@id/file_picker_layout"
        app:tint="@color/neutral_600" />

</androidx.constraintlayout.widget.ConstraintLayout>